fix menu mobile alignment

--- a/web/src/scss/main.scss
+++ b/web/src/scss/main.scss
@@ -1239,6 +1239,7 @@ footer {
         bottom: auto;
         width: 100%;
         a {
+            vertical-align: top;
             top: 26px;
             display: inline-block;
             margin: 0 5px 5px 5px;
